--- a/notebooks/02_model_training.ipynb
+++ b/notebooks/02_model_training.ipynb
@@ -9,7 +9,45 @@
    },
    "outputs": [],
    "source": [
-    ""
+    "# 02_model_training.ipynb\n",
+    "\n",
+    "import numpy as np\n",
+    "import librosa\n",
+    "import os\n",
+    "from sklearn.model_selection import train_test_split\n",
+    "from sklearn.svm import SVC\n",
+    "from sklearn.metrics import classification_report\n",
+    "\n",
+    "# 假设 data/processed 里存放提取好的特征和标签\n",
+    "def extract_features(file_path):\n",
+    "    y, sr = librosa.load(file_path, sr=22050)\n",
+    "    mfccs = librosa.feature.mfcc(y=y, sr=sr, n_mfcc=13)\n",
+    "    return np.mean(mfccs.T, axis=0)  # 平均池化作为固定长度向量\n",
+    "\n",
+    "X, y = [], []\n",
+    "data_dir = \"../data/raw/\"\n",
+    "labels = [\"bending\", \"vibrato\", \"sliding\"]\n",
+    "\n",
+    "for label in labels:\n",
+    "    folder = os.path.join(data_dir, label)\n",
+    "    for f in os.listdir(folder):\n",
+    "        feature = extract_features(os.path.join(folder, f))\n",
+    "        X.append(feature)\n",
+    "        y.append(label)\n",
+    "\n",
+    "X = np.array(X)\n",
+    "y = np.array(y)\n",
+    "\n",
+    "# 划分训练/测试集\n",
+    "X_train, X_test, y_train, y_test = train_test_split(X, y, test_size=0.2, random_state=42)\n",
+    "\n",
+    "# 训练 SVM\n",
+    "clf = SVC(kernel='linear')\n",
+    "clf.fit(X_train, y_train)\n",
+    "\n",
+    "# 评估\n",
+    "y_pred = clf.predict(X_test)\n",
+    "print(classification_report(y_test, y_pred))\n"
    ]
   }
  ],
